# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  05 Dec 2004; Brian Harring <ferringb@gentoo.org> pym/cache, pym/cache/template.py,
  pym/cache/fs_template.py, pym/cache/sql_template.py, pym/cache/flat_list.py, 
  pym/cache/anydbm.py, pym/cache/sqlite.py, pym/cache/cache_errors.py, 
  pym/cache/__init__.py:  Cache refactoring, not active in the code currently.
  All backends should work, although the code is not finished.  Locking support
  needs to be added into fs_template- possibly do it in the derived fsbased 
  backeends, since locking for flat_list is quite different from locking for 
  anydbm.

  05 Dec 2004; Nicholas Jones <carpaski@gentoo.org> pym/portage.py: swegener
  made quite a find in portdbapi.cpv_exists, the comparison on the tuple
  returned by findname2 always evaluated true.

  05 Dec 2004; Nicholas Jones <carpaski@gentoo.org> bin/: Added SpanKY's
  patch for stripping coherency -- All stripping is performed in prepstrip.

  28 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild-daemon.sh: 
  Correction of return code for execute_phases w/ logging.

  26 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Fixed a bug in
  graph_display.use_flags().

  24 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Fixed a bug in
  the relevant package calculation for dep display.

  24 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Added the removal
  of fully installed dependency subtrees causing faster calculation due to less
  circular dependencies.

  23 Nov 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: --columns
  support is in and working. Algorithm has changed a little so that the minimum